@@ -1,5 +1,4 @@
 from zope.publisher.browser import TestRequest as baseTestRequest
-from Products.CMFCore.utils import getToolByName
 from Products.Five import zcml
 from Products.CMFCore.exportimport.skins import importSkinsTool
 from Products.GenericSetup.tests.common import DummyImportContext
@@ -36,7 +35,7 @@ def _hold(self, object):
     Needed by CMFCore/Skinnable.py(142)changeSkin()
     """
     if self._held is not None:
-        self._held=self._held+(object, )
+        self._held = self._held + (object, )
 
 
 class TestRequest(baseTestRequest):
@@ -45,6 +44,14 @@ class TestRequest(baseTestRequest):
     def set(self, key, value):
         self.form[key] = value
 
+    def get_header(self, *args, **kwargs):
+        """Get something from the header.
+
+        This method is not available on a base test request, but we
+        need it for some checks.
+        """
+        return self.get(*args, **kwargs)
+
 TestRequest._hold = _hold
 
 
@@ -52,7 +59,6 @@ def new_default_skin(portal):
     """ Register test skins folder with extra test template - zcml
         then make new default skin based on Plone Default with test skin - xml
     """
-    sk_tool = getToolByName(portal, 'portal_skins')
     zcml.load_config('skins.zcml', collective.editskinswitcher.tests)
     importcontext = DummyImportContext(portal, False)
     importcontext._files['skins.xml'] = SKINCONFIG
